# rvv

./: CMakeLists.txt  Kconfig  README.md  compile_definitions.txt  compile_flags.txt  project.py  rvv_use.md  sdkconfig  setup.py  编译.md  运算.md
docs/: api.md
src/: pybind_rvv.cpp  rvv.cpp  rvv.hpp
tests/: test_int8.py  test_rvv.py
tools/: parse_sdkconfig.py  pybind_gen.py  toolchain.cmake
